--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,40 @@ label {
 .address {
   margin-top: 10px;
 }
+
+.closeButton{
+  position: absolute;
+    top: -12.5px;
+    right: -12.5px;
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    padding: 0;
+}
+
+.textModal{
+  margin: 0;
+}
+
+.modal{
+  position: relative;
+  inset: 50% auto auto 50%;
+  border: 1px solid rgb(204, 204, 204);
+  background: rgb(255, 255, 255);
+  border-radius: 8px;
+  outline: none;
+  padding: 15px 30px;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  vertical-align: middle;
+  z-index: 2;
+  max-width: 500px;
+  box-sizing: border-box;
+  width: 90%;
+  box-shadow: rgb(0, 0, 0) 0px 0px 10px;
+  text-align: left;
+  overflow: visible;
+}
