--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,27 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 .title {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+
+a:hover {
+  color: #535bf2;
+}
+
+button:hover {
+  border-color: #646cff;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
 
 .container {
   display: flex;
@@ -64,24 +40,24 @@ label {
   margin-top: 10px;
 }
 
-.closeButton{
+.closeButton {
   position: absolute;
-    top: -12.5px;
-    right: -12.5px;
-    display: block;
-    width: 30px;
-    height: 30px;
-    background-color: black;
-    color: white;
-    border-radius: 50%;
-    padding: 0;
+  top: -12.5px;
+  right: -12.5px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  padding: 0;
 }
 
-.textModal{
+.textModal {
   margin: 0;
 }
 
-.modal{
+.modal {
   position: relative;
   inset: 50% auto auto 50%;
   border: 1px solid rgb(204, 204, 204);
@@ -99,4 +75,19 @@ label {
   box-shadow: rgb(0, 0, 0) 0px 0px 10px;
   text-align: left;
   overflow: visible;
+}
+
+form {
+  margin-block-end: 1em;
+}
+
+#employee-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.table {
+  width: auto !important;
 }
